--- a/you.html
+++ b/you.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My page</title>
+  <title>My page - Pikko Videos</title>
   <font size="7" color="purple"><p id="currentUser"></p>
   <script src="js/config.js"></script>
   <script src="js/storage.js"></script>
