--- a/you.html
+++ b/you.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>My page - Pikko Videos</title>
-  <font size="7" color="purple"><p id="currentUser"></p>
   <script src="js/config.js"></script>
   <script src="js/storage.js"></script>
 </head>
 <body>
   <h1>My page</h1>
-
+  <font size="7" color="purple"><p id="currentUser"></p></font>
   <button onclick="logout()">logout</button>
   <button onclick="removeAccount()">delete this account</button>
 
