--- a/watch.html
+++ b/watch.html
@@ -13,6 +13,7 @@
   </style>
 </head>
 <body>
+  <a href="https://videos.bird.f5.si"><img src="logo.png" alt="logo" width="200" height="100"></a>
   <div id="content"></div>
 
   <script>
