--- a/you.html
+++ b/you.html
@@ -7,9 +7,7 @@
   <script src="js/storage.js"></script>
 </head>
 <body>
-  <a href="https://videos.bird.f5.si">
-    <img src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100">
-  </a>
+  <a href="https://videos.bird.f5.si"><img src="logo.png" alt="logo" width="200" height="100"></a>
   <h1>My page</h1>
   <font size="7" color="purple"><p id="currentUser"></p></font>
   <button onclick="logout()">logout</button>
