--- a/watch.html
+++ b/watch.html
@@ -38,7 +38,9 @@
             content.innerHTML = `
               <h1>${info.title} - ${info.username}</h1>
               <video src="${videoUrl}" controls autoplay playsinline></video>
+              <p style="white-space: pre-wrap; margin-top: 1em;">${info.description}</p>
             `;
+
           }
         })
         .catch(() => {
