--- a/you.html
+++ b/you.html
@@ -23,6 +23,7 @@
   <div id="list"></div>
 
   <script>
+    const SERVER = "https://pikko-videos-data.loca.lt";
     const me = Storage.getUser();
     if (!me) location.href = "signin.html";
     document.getElementById("currentUser").textContent = me;
