--- a/you.html
+++ b/you.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <a href="https://videos.bird.f5.si"><img src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100"></a>
+  <input type="button" value="share" onclick="copyUrl()">
   <h1>My page</h1>
   <font size="7" color="purple"><p id="currentUser"></p></font>
   <button onclick="logout()">logout</button>
@@ -94,6 +95,10 @@
     }
 
     renderVideos();
+    
+    function copyUrl() {
+  var url = `https://channel?name=${name}`;
+  navigator.clipboard.writeText(url);
   </script>
 </body>
 </html>
