--- a/you.html
+++ b/you.html
@@ -97,7 +97,7 @@
     renderVideos();
     
     function copyUrl() {
-  var url = `https://videos.bird.f5.si/channel?name=${name}`;
+  const url = `https://videos.bird.f5.si/channel?name=${name}`;
   navigator.clipboard.writeText(url);
     }
   </script>
