--- a/you.html
+++ b/you.html
@@ -165,7 +165,7 @@
     }
 
     function copyUrl() {
-  const url = 'https://videos.bird.f5.si/channel?name=${me}';
+  const url = `https://videos.bird.f5.si/channel?name=${me}`;
   navigator.clipboard.writeText(url);
     }
 
