--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
   <a href="https://videos.bird.f5.si"><img src="logo.png" alt="logo" width="200" height="100"></a>
   <a href="you">My page</a>
+  <a href="about">about</a>
+  <a href="terms">terms of service</a>
   <h1>channels</h1>
   <div id="userList"></div>
   <script>
