--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
-    <h1>What is this service?</h1>
+    <h1>What service is this?</h1>
     <p>This service is a video posting service.</p>
     <p><a href="https://videos.bird.f5.si/terms">terms of service is here</a></p>
     <h1>Thanks</h1>
