--- a/signup.html
+++ b/signup.html
@@ -12,6 +12,7 @@
   <h1>signup</h1>
   <input id="username" placeholder="name"><br>
   <input id="password" type="password" placeholder="password"><br>
+  <p>Agree to the <a href="terms">"terms"</a> before creating an account.</p>
   <button onclick="signup()">signup</button>
   <p id="message"></p>
   <p><a href="signin">signin</a></p>
