--- a/terms.html
+++ b/terms.html
@@ -6,9 +6,11 @@
   </head>
   <body>
     <h1>rule</h1>
-    <p>･By using this service, you are deemed to have agreed to the terms of use of this service (hereinafter referred to as the "Terms").</p>
+    <p>･By using this service, you are deemed to have agreed to the terms of use of this service (hereinafter referred to as the "This term").</p>
     <p>･We are not responsible for any damages incurred to the accounts created through this service or videos posted.</p>
     <p>･Do not submit videos or text that other users may find offensive.</p>
     <p>･Do not use it in a manner that violates the Constitution.</p>
+    <p>･Malicious accounts and videos will be deleted without prior notice.</p>
+    <p>･This term may be changed without prior notice.</p>
   </body>
 </html>
