--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
+    <a href="https://videos.bird.f5.si"><img src="logo.png" alt="logo" width="200" height="100"></a>
     <h1>What service is this?</h1>
     <p>This service is a video posting service.</p>
     <p><a href="https://videos.bird.f5.si/terms">terms of service is here</a></p>
