--- a/terms.html
+++ b/terms.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
+    <a href="https://videos.bird.f5.si"><img src="logo.png" alt="logo" width="200" height="100"></a>
     <h1>rule</h1>
     <p>･By using this service, you are deemed to have agreed to the terms of use of this service (hereinafter referred to as the "This term").</p>
     <p>･We are not responsible for any damages incurred to the accounts created through this service or videos posted.</p>
