--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
     <p><a href="https://videos.bird.f5.si/terms">terms of service is here</a></p>
     <h1>Thanks</h1>
     <p>This service was completed thanks to Copilot AI.</p>
+    <p>We many used Google translate to make this service.</p>
     <p>Thank you.</p>
     <h1>Usage</h1>
     <p><font color="red">This service often has servers that are not running.</font></p>
