--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <p>We many used Google translate to make this service.</p>
     <p>Thank you.</p>
     <h1>Usage</h1>
-    <p><font color="red">This service often has servers that are not running.</font></p>
+    <p><font color="red">The server often stop.</font></p>
     <p>If video and other acquisitions are slow, or if it takes a long time to post videos, create an account, or log in, the server may not be running.</p>
     <p>If the situation does not change even after waiting for a while, please stop using the service.</p>
   </body>
