--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 </head>
 <body>
   <a href="https://videos.bird.f5.si"><img src="logo.png" alt="logo" width="200" height="100"></a>
-  <a href="you">My page</a>
-  <a href="about">about</a>
-  <a href="terms">terms of service</a>
+  <table>
+    <tr>
+      <th><a href="you">My page</a></th>
+      <th><a href="about">about</a></th>
+      <th><a href="terms">terms of service</a></th>
+    </tr>
+  </table>
   <h1>channels</h1>
   <div id="userList"></div>
   <script>
