--- a/you.html
+++ b/you.html
@@ -7,10 +7,8 @@
   <script src="js/storage.js"></script>
 </head>
 <body>
-  <a href="https://videos.bird.f5.si">
-    <img src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100">
-  </a>
-  <input type="button" value="share" onclick="copyUrl()">
+  <a href="https://videos.bird.f5.si"><img src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100"></a>
+  <p><input type="button" value="share" onclick="copyUrl()"></p>
   <span id="copyMessage" style="color: green; margin-left: 10px;"></span>
 
   <h1>My page</h1>
