--- a/channel.html
+++ b/channel.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <a href="https://videos.bird.f5.si"><img src="logo.png" alt="logo" width="200" height="100"></a>
-  <input type="button" value="share" onclick="copyUrl()">
+  <p><input type="button" value="share" onclick="copyUrl()"></p>
   <div id="content"></div>
   <script>
     const params = new URLSearchParams(location.search);
