--- a/watch.html
+++ b/watch.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>watch - Pikko Videos</title>
-  <script>const SERVER = "https://pikko-videos-data.onrender.com";</script>
+  <script>const SERVER = "https://pikko-videos-data-f2f9.onrender.com";</script>
   <style>
     .error {
       color: red;
