--- a/index.html
+++ b/index.html
@@ -16,17 +16,21 @@
       <th><a href="terms">terms of service</a></th>
     </tr>
   </table>
+
   <h1>channels</h1>
   <div id="userList"></div>
+
   <script>
     const me = Storage.getUser();
     if (!me) location.href = "signin";
 
     fetch(`${SERVER}/users`)
       .then(res => res.json())
-      .then(users => {
-        const list = users.filter(u => u !== me)
-          .map(u => `<div><a href="channel?name=${encodeURIComponent(u)}">${u}</a></div>`)
+      .then(data => {
+        const usersArray = data.users || [];
+        const list = usersArray
+          .filter(user => user.username !== me)
+          .map(user => `<div><a href="channel?name=${encodeURIComponent(user.username)}">${user.username}</a></div>`)
           .join("");
         document.getElementById("userList").innerHTML = list || "Other channels are not there.";
       });
