--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <p>This service was completed thanks to Copilot AI.</p>
     <p>We many used Google translate to make this service.</p>
     <p>Thank you.</p>
-    <h1>Usage</h1>
+    <h1>note</h1>
     <p><font color="red">The server often stop.</font></p>
     <p>If video and other acquisitions are slow, or if it takes a long time to post videos, create an account, or log in, the server may not be running.</p>
     <p>If the situation does not change even after waiting for a while, please stop using the service.</p>
