--- a/embed.html
+++ b/embed.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <script>cont SERVER = "https://pikko1.tcpexposer.com";</script>
+  <script>const SERVER = "https://pikko1.tcpexposer.com";</script>
   <title>embed - Pikko Videos</title>
   <style>
     html, body {
