--- a/watch.html
+++ b/watch.html
@@ -67,7 +67,7 @@
     }
 
     function copyCode() {
-      const url = `<iframe src="http://videos.bird.f5.si/embed?id=${id}" width="640" height="360" frameborder="0" allowfullscreen></iframe>`;
+      const url = `<iframe src="https://videos.bird.f5.si/embed?id=${id}" width="640" height="360" frameborder="0" allowfullscreen></iframe>`;
       navigator.clipboard.writeText(url);
     }
   </script>
